# skoda_hackathon_2025

./: .env.example  .env.production  .gitignore  App.tsx  DEPLOYMENT.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  FRONTEND_SETUP.md  FRONTEND_UPGRADE_NEEDED.md  PROJECT_README.md  QUICK_START.md  README.md  app.py  constants.ts  docker-compose.yml  index.css  index.html  metadata.json  nginx.conf  package-lock.json  package.json  requirements.txt  start.sh  start_backend.sh  start_frontend.sh  stop.sh  tailwind.config.cjs  tailwind.config.js  test_servers.py  tsconfig.json  types.ts  vercel.json  vite.config.js
src/: README.md  (+9 more)
srcs/: DEPLOYMENT.md  Dockerfile  HACKATHON_ASSESSMENT.md  Makefile  README.md  ai_service.py  cgi.py  data_loader.py  diagram.html  docker-compose.yml  env_template.txt  etl_pipeline.py  manage.py  presentation.html  processing.py  pyproject.toml  requirements.txt  setup-server.sh  tmp_whatever
srcs/AI_Skoda_Hackathon/: .gitignore  CI_CD.md  DATA_SETUP_SUCCESS.md  MAKEFILE_GUIDE.md  Makefile  README.md  docker-compose.yml  test-ci.sh  verify-data-cleanup.sh  verify-docker-data.sh
srcs/administration/: apps.py  forms.py  mixins.py  urls.py  views.py
srcs/artifacts/: translation_cache.json
srcs/authen/: backends.py  decorators.py  forms.py  models.py  views.py
srcs/backend/: Dockerfile  app.py  config.py  job_matching_db.py  requirements.txt  training_path_builder.py
srcs/data/: 250828_Export_AI_Skill_Coatch_RE_RHRHAZ00_T_ZX.txt  250828_Export_AI_Skill_Coatch_RE_RHRHAZ00_ZP.txt  250828_Export_AI_Skill_Coatch_RE_RHRHAZ00_ZS.txt  (+6 more)
(+681 files in other folders)
